# glados

./: README.md
.devcontainer/: .onCreateCommandMarker  devcontainer.json  full.Dockerfile  pc.Dockerfile  pi.Dockerfile
glados_ws/src/glados_bringup/: package.xml  setup.cfg  setup.py
glados_ws/src/glados_bringup/launch/: create_tf.launch.py  joy_lidar_bringup.launch.py  mapper_params.yaml  navigate.launch.py  threeD_map.launch.py
glados_ws/src/glados_lidar/: package.xml  setup.cfg  setup.py
glados_ws/src/glados_lidar/config/: ls_filter.yaml
glados_ws/src/glados_lidar/glados_lidar/: laser2pc_converter.py  laser_filter.py
glados_ws/src/glados_lidar/launch/: lidar_bringup.launch.py  lidar_driver.launch.py
glados_ws/src/glados_nav/: package.xml  setup.cfg  setup.py
glados_ws/src/glados_nav/launch/: bringup_launch.py  nav2_backup_shim.yaml  nav2_params.yaml  nav2_params_backup.yaml  navigation_launch.py  rviz_launch.py  slam_launch.py
glados_ws/src/glados_octomap_mapping/glados_octomap_mapping/: CMakeLists.txt  package.xml
glados_ws/src/glados_octomap_mapping/glados_octomap_server/: CMakeLists.txt  package.xml
glados_ws/src/glados_octomap_mapping/glados_octomap_server/src/: octomap_server.cpp  (+1 more)
glados_ws/src/glados_rf2o_laser_odom/: CMakeLists.txt  package.xml
glados_ws/src/glados_rf2o_laser_odom/launch/: glados_odom.launch.py
glados_ws/src/glados_rf2o_laser_odom/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
glados_ws/src/glados_teleop/: package.xml  setup.cfg  setup.py
glados_ws/src/glados_teleop/glados_teleop/: teleoperate.py
glados_ws/src/glados_teleop/launch/: teleop.launch.py  xbox.yaml
glados_ws/src/mapping/: CMakeLists.txt  package.xml
glados_ws/src/mapping/launch/: init_transforms.launch.py  rsp_launch.py  test_octomap.xml
glados_ws/src/mapping/src/: joystick_controller.cpp
glados_ws/src/mapping/urdf/: robot_ad.urdf
glados_ws/src/mapping/urdf/meshes/: ceiling.dae  chassis.dae  chassis_wall.dae  tire.dae
maps/: romer.pgm  romer.yaml  us_room.pgm  us_room.yaml
util/: build_image_pi.sh  build_ws_pi.sh  create_glados_pi.sh
(+2 files in other folders)
